--- a/src/app/modules/companies/components/company-review-block/company-review-block.component.html
+++ b/src/app/modules/companies/components/company-review-block/company-review-block.component.html
@@ -101,7 +101,7 @@
           <div class="me-2">
             <button
               type="button"
-              class="btn btn-link btn-sm text-muted p-0"
+              class="btn btn-link btn-lg text-muted p-0"
               (click)="copyLinkClicked()"
               title="Скопировать ссылку на отзыв"
             >
