--- a/src/app/modules/companies/components/recent-reviews/recent-reviews-page.component.html
+++ b/src/app/modules/companies/components/recent-reviews/recent-reviews-page.component.html
@@ -28,6 +28,7 @@
             (like)="likeClicked(item)"
             (dislike)="dislikeClicked(item)"
             (clickWhileDisabledForAnonymous)="clickWhileDisabledForAnonymous()"
+            (copyLink)="copyReviewLink(item)"
           ></app-company-review-block>
         </div>
       </div>
