--- a/src/app/modules/home/components/home/home.component.html
+++ b/src/app/modules/home/components/home/home.component.html
@@ -40,9 +40,9 @@
             >
           </div>
         </div>
-        <div class="col-sm-6">
+        <div class="col-sm-6 d-flex align-items-center justify-content-center align-items-sm-end justify-content-sm-end">
           <img
-            class="img-fluid"
+            class="img-fluid feature-image"
             src="https://techinterview.fra1.cdn.digitaloceanspaces.com/images/main_charts_transparent_1000.png"
             alt="Main"
           />
@@ -69,9 +69,9 @@
           </div>
         </div>
 
-        <div class="col-sm-6">
+        <div class="col-sm-6 d-flex align-items-center justify-content-center align-items-sm-end justify-content-sm-end">
           <img
-            class="img-fluid"
+            class="img-fluid feature-image"
             src="https://techinterview.fra1.cdn.digitaloceanspaces.com/images/company_reviews_1000.png"
             alt="Main"
           />
@@ -97,9 +97,9 @@
           </div>
         </div>
 
-        <div class="col-sm-6">
+        <div class="col-sm-6 d-flex align-items-center justify-content-center align-items-sm-end justify-content-sm-end">
           <img
-            class="img-fluid"
+            class="img-fluid feature-image"
             src="https://techinterview.fra1.cdn.digitaloceanspaces.com/images/main_interview_transparent_1000.png"
             alt="Main"
           />
