--- a/src/app/modules/salaries/components/salaries-chart/salaries-chart.component.html
+++ b/src/app/modules/salaries/components/salaries-chart/salaries-chart.component.html
@@ -1,43 +1,64 @@
 <app-page-header>Зарплаты в IT в Казахстане</app-page-header>
 
-<div *ngIf="showDataStub" class="container mt-5 mb-3">
-  <div *ngIf="isAuthenticated" class="alert alert-warning p-5" role="alert">
-    <div class="mb-2 h3">{{ isYourSalaryWithinMarketTitle }}</div>
-    <div class="mb-3">
-      Оставьте данные о своей зарплате, чтобы узнать, сколько зарабатывают
-      другие IT-специалисты в Казахстане.
+<div *ngIf="showDataStub" class="container mt-5 mb-3 non-authorized-block">
+  <div
+    class="alert alert-warning mobile-px-5 mobile-py-3"
+  >
+    <div class="h2">Внимание!</div>
+    <div class="mt-2" *ngIf="!hasPredefinedFilter">
+      Вы видите <strong>обобщенные данные</strong> для всех
+      специальностей, форм работ и грейдов.
+      <br />
+      Для получения более точной статистики и возможности применять
+      фильтры вам нужно
+      <button
+        class="btn-link-sm fst-italic font-weight-normal px-1"
+        (click)="openAddSalaryAction()"
+      >
+        {{
+          isAuthenticated
+            ? "оставить анкету"
+            : "авторизоваться на сайте"
+        }}
+      </button>
     </div>
-    <div>
-      <button class="btn btn-dark" (click)="openAddSalaryAction()">
-        Добавить зарплату
+
+    <div class="mt-2" *ngIf="hasPredefinedFilter">
+      Вы видите <strong>обобщенные данные</strong> по определенному
+      фильтру.
+      <br />
+      Для получения статистики по всем зарплатам и возможности применять
+      фильтры вам нужно
+      <button
+        class="btn-link-sm fst-italic font-weight-normal px-1"
+        (click)="openAddSalaryAction()"
+      >
+        {{
+          isAuthenticated
+            ? "добавить свою зарплату"
+            : "войти/зарегистрироваться"
+        }}
+      </button>
+    </div>
+
+    <div class="mt-3">
+      <button class="btn btn-outline-dark" (click)="openAddSalaryAction()">
+        {{
+          isAuthenticated
+            ? "Заполнить анкету"
+            : "Авторизоваться на сайте"
+        }}
       </button>
     </div>
   </div>
 
-  <div
-    *ngIf="!isAuthenticated && !hasPredefinedFilter"
-    class="mt-5 alert alert-success"
-  >
-    <div class="mb-2 h3">{{ isYourSalaryWithinMarketTitle }}</div>
-    <div class="mb-3">
-      Зарегистрируйтесь и оставьте данные о своей зарплате, чтобы узнать,
-      сколько зарабатывают другие IT-специалисты в Казахстане.
-    </div>
-    <div class="">
-      <button
-        class="btn btn-purple btn-lg px-5"
-        (click)="openAddSalaryAction()"
-      >
-        Войти / Зарегистрироваться
-      </button>
-    </div>
-  </div>
 </div>
 
 <div class="container mb-5" *ngIf="salariesChart != null; else dataLoading">
   <div class="card">
     <div class="card-body mobile-px-5 mobile-py-5">
       <div class="mb-3" *ngIf="hasPredefinedFilter">
+
         <app-predefined-info-block
           [filterData]="filterData"
           [skills]="skills"
@@ -53,54 +74,6 @@
         ></app-salary-block-value>
 
         <div class="mb-3 mt-3">
-          <div
-            *ngIf="showDataStub && !hasPredefinedFilter"
-            class="alert alert-warning"
-          >
-            <div class="h3">Внимание!</div>
-            <div class="mt-2">
-              Вы видите <strong>обобщенные данные</strong> для всех
-              специальностей, форм работ и грейдов.
-              <br />
-              Для получения более точной статистики и возможности применять
-              фильтры вам нужно
-              <button
-                class="btn-link-sm fst-italic font-weight-normal px-1"
-                (click)="openAddSalaryAction()"
-              >
-                {{
-                  isAuthenticated
-                    ? "добавить свою зарплату"
-                    : "войти/зарегистрироваться"
-                }}
-              </button>
-            </div>
-          </div>
-
-          <div
-            *ngIf="showDataStub && hasPredefinedFilter"
-            class="alert alert-warning"
-          >
-            <div class="h3">Внимание!</div>
-            <div class="mt-2">
-              Вы видите <strong>обобщенные данные</strong> по определенному
-              фильтру.
-              <br />
-              Для получения статистики по всем зарплатам и возможности применять
-              фильтры вам нужно
-              <button
-                class="btn-link-sm fst-italic font-weight-normal px-1"
-                (click)="openAddSalaryAction()"
-              >
-                {{
-                  isAuthenticated
-                    ? "добавить свою зарплату"
-                    : "войти/зарегистрироваться"
-                }}
-              </button>
-            </div>
-          </div>
-
           <div
             class="fst-italic text-muted"
             *ngIf="
