--- a/src/app/modules/home/components/home/home.component.html
+++ b/src/app/modules/home/components/home/home.component.html
@@ -40,7 +40,9 @@
             >
           </div>
         </div>
-        <div class="col-sm-6 d-flex align-items-center justify-content-center align-items-sm-end justify-content-sm-end">
+        <div
+          class="col-sm-6 d-flex align-items-center justify-content-center align-items-sm-end justify-content-sm-end"
+        >
           <img
             class="img-fluid feature-image"
             src="https://techinterview.fra1.cdn.digitaloceanspaces.com/images/main_charts_transparent_1000.png"
@@ -69,7 +71,9 @@
           </div>
         </div>
 
-        <div class="col-sm-6 d-flex align-items-center justify-content-center align-items-sm-end justify-content-sm-end">
+        <div
+          class="col-sm-6 d-flex align-items-center justify-content-center align-items-sm-end justify-content-sm-end"
+        >
           <img
             class="img-fluid feature-image"
             src="https://techinterview.fra1.cdn.digitaloceanspaces.com/images/company_reviews_1000.png"
@@ -97,7 +101,9 @@
           </div>
         </div>
 
-        <div class="col-sm-6 d-flex align-items-center justify-content-center align-items-sm-end justify-content-sm-end">
+        <div
+          class="col-sm-6 d-flex align-items-center justify-content-center align-items-sm-end justify-content-sm-end"
+        >
           <img
             class="img-fluid feature-image"
             src="https://techinterview.fra1.cdn.digitaloceanspaces.com/images/main_interview_transparent_1000.png"
