--- a/src/app/modules/salaries/components/salaries-chart/salary-chart-global-filters/salary-chart-global-filters.component.html
+++ b/src/app/modules/salaries/components/salaries-chart/salary-chart-global-filters/salary-chart-global-filters.component.html
@@ -77,7 +77,7 @@
 
         <div class="col-md-3 mb-1" *ngIf="showSalariesSource">
           <label class="text-sm">Статистика на дату</label>
-          <input type="date" class="form-control" formControlName="dateTo">
+          <input type="date" class="form-control" formControlName="dateTo" />
         </div>
 
         <div class="col-md-4 mb-1 d-flex align-items-end">
