--- a/src/app/modules/salaries/components/salaries-chart/salaries-chart.component.html
+++ b/src/app/modules/salaries/components/salaries-chart/salaries-chart.component.html
@@ -1,34 +1,27 @@
 <app-page-header>Зарплаты в IT в Казахстане</app-page-header>
 
 <div *ngIf="showDataStub" class="container mt-5 mb-3 non-authorized-block">
-  <div
-    class="alert alert-warning mobile-px-5 mobile-py-3"
-  >
+  <div class="alert alert-warning mobile-px-5 mobile-py-3">
     <div class="h2">Внимание!</div>
     <div class="mt-2" *ngIf="!hasPredefinedFilter">
-      Вы видите <strong>обобщенные данные</strong> для всех
-      специальностей, форм работ и грейдов.
+      Вы видите <strong>обобщенные данные</strong> для всех специальностей, форм
+      работ и грейдов.
       <br />
-      Для получения более точной статистики и возможности применять
-      фильтры вам нужно
+      Для получения более точной статистики и возможности применять фильтры вам
+      нужно
       <button
         class="btn-link-sm fst-italic font-weight-normal px-1"
         (click)="openAddSalaryAction()"
       >
-        {{
-          isAuthenticated
-            ? "оставить анкету"
-            : "авторизоваться на сайте"
-        }}
+        {{ isAuthenticated ? "оставить анкету" : "авторизоваться на сайте" }}
       </button>
     </div>
 
     <div class="mt-2" *ngIf="hasPredefinedFilter">
-      Вы видите <strong>обобщенные данные</strong> по определенному
-      фильтру.
+      Вы видите <strong>обобщенные данные</strong> по определенному фильтру.
       <br />
-      Для получения статистики по всем зарплатам и возможности применять
-      фильтры вам нужно
+      Для получения статистики по всем зарплатам и возможности применять фильтры
+      вам нужно
       <button
         class="btn-link-sm fst-italic font-weight-normal px-1"
         (click)="openAddSalaryAction()"
@@ -43,22 +36,16 @@
 
     <div class="mt-3">
       <button class="btn btn-outline-dark" (click)="openAddSalaryAction()">
-        {{
-          isAuthenticated
-            ? "Заполнить анкету"
-            : "Авторизоваться на сайте"
-        }}
+        {{ isAuthenticated ? "Заполнить анкету" : "Авторизоваться на сайте" }}
       </button>
     </div>
   </div>
-
 </div>
 
 <div class="container mb-5" *ngIf="salariesChart != null; else dataLoading">
   <div class="card">
     <div class="card-body mobile-px-5 mobile-py-5">
       <div class="mb-3" *ngIf="hasPredefinedFilter">
-
         <app-predefined-info-block
           [filterData]="filterData"
           [skills]="skills"
