--- a/src/app/modules/home/components/me/me.component.html
+++ b/src/app/modules/home/components/me/me.component.html
@@ -96,6 +96,7 @@
               </span>
               <button
                 type="button"
+                disabled
                 class="btn btn-outline-primary btn-sm mt-2"
                 (click)="openMfaSetupDialog()"
               >
