--- a/src/app/modules/salaries/components/historical-charts-page/historical-charts-page.component.html
+++ b/src/app/modules/salaries/components/historical-charts-page/historical-charts-page.component.html
@@ -1,83 +1,33 @@
 <app-page-header>Исторические данные</app-page-header>
 
 <div class="container my-5" *ngIf="data; else dataLoading">
-  <div *ngIf="!data.shouldAddOwnSalary; else noCurrentSalary">
-    <div class="mb-5 card card-body mobile-px-5 mobile-py-5">
-      <div class="h4 mb-3">Фильтр</div>
-      <app-salary-chart-global-filters
-        [filterData]="filterData"
-        [showSalariesSource]="false"
-        [professions]="professions"
-        [skills]="skills"
-        (filtersApplied)="applyGlobalFilters($event)"
-        (filtersReset)="resetGlobalFilters()"
-        (shareClicked)="share($event)"
-      />
-    </div>
+  <div class="mb-4" *ngIf="data.from && data.to">
+    <span class="text-muted">
+      Период: {{ data.from | date:'dd.MM.yyyy' }} - {{ data.to | date:'dd.MM.yyyy' }}
+    </span>
+  </div>
 
-    <div class="card card-body mobile-px-5 mobile-py-5">
-      <div class="display-4 mb-5">
-        Тенденция изменения медианы и средней зарплаты
+  <div *ngIf="data.templates && data.templates.length > 0; else noData">
+    <div class="card card-body mobile-px-5 mobile-py-5 mb-4" *ngFor="let template of data.templates">
+      <div class="display-6 mb-4">
+        {{ template.name || 'Общие данные' }}
       </div>
 
       <div class="mb-5">
-        <p>
-          Графики отображают тенденцию измнения зарплат за определенный отрезок
-          времени. График покажет 4 линии по оси Y слева на зарплатные значения:
-          медианная и средняя для компаний в Казахстане и на удаленке. Еще одна
-          линия по оси Y справа покажет, сколько было релевантных анкет на
-          определенный момент времени.
-        </p>
-        <p>Фильтр позволит ограничить выборку анкет по желаемым критериям.</p>
-      </div>
-
-      <div class="mb-5">
-        <app-historical-salaries-chart
-          [data]="data.salariesCountWeekByWeekChart"
-        />
-      </div>
-
-      <div
-        *ngIf="
-          data.salariesCountWeekByWeekChart &&
-          data.salariesCountWeekByWeekChart.hasGradeItems
-        "
-        class="mb-5"
-      >
-        <app-historical-salaries-by-grade-chart
-          [data]="data.salariesCountWeekByWeekChart"
-        />
-      </div>
-    </div>
-
-    <div class="mt-5 card card-body mobile-px-5 mobile-py-5">
-      <div class="display-4 mb-5">Оценка статистики респондентами</div>
-      <div class="" *ngIf="surveyChart">
-        <app-survey-historical-chart [data]="surveyChart" />
+        <app-historical-salaries-chart [template]="template" />
       </div>
     </div>
   </div>
+
+  <ng-template #noData>
+    <div class="card card-body">
+      <p class="text-muted mb-0">Нет данных для отображения</p>
+    </div>
+  </ng-template>
 </div>
 
 <ng-template #dataLoading>
   <div class="container my-5">
     <app-data-loader></app-data-loader>
-  </div>
-</ng-template>
-
-<ng-template #noCurrentSalary>
-  <div class="container my-5">
-    <div class="card card-body">
-      <div class="mb-3">
-        Доступ к статистике открыватся только после того, как пользователь
-        добавляет актуальную зарплату. Пожалуйста, перейдите по ссылке ниже,
-        чтобы перейти к форме заполнния анкеты.
-      </div>
-      <div>
-        <a routerLink="/salaries" class="btn btn-link">
-          Перейти к форме анкеты
-        </a>
-      </div>
-    </div>
   </div>
 </ng-template>
