--- a/src/app/modules/salaries/components/historical-charts-page/historical-salaries-chart/historical-salaries-chart.component.scss
+++ b/src/app/modules/salaries/components/historical-charts-page/historical-salaries-chart/historical-salaries-chart.component.scss
@@ -1,10 +1,10 @@
-#canvas-historical-chart {
-  min-height: 600px;
-}
-
-#canvas-historical-chart-container {
+.canvas-container {
   position: relative;
   width: 100%;
   height: 100%;
   min-height: 600px;
+
+  canvas {
+    min-height: 600px;
+  }
 }
