--- a/src/app/modules/admin/components/telegram/job-posting-message-subscriptions/job-posting-message-subscriptions.component.html
+++ b/src/app/modules/admin/components/telegram/job-posting-message-subscriptions/job-posting-message-subscriptions.component.html
@@ -29,9 +29,15 @@
             <tr class="small" *ngFor="let item of items; let i = index">
               <td>{{ item.name }}</td>
               <td>
-                <span *ngFor="let speciality of item.professionIds">
-                  {{ speciality }},
-                </span>
+                <a
+                  *ngIf="item.professionIds && item.professionIds.length > 0"
+                  href="#"
+                  class="text-primary"
+                  (click)="openProfessionsModal(item.professionIds); $event.preventDefault()"
+                >
+                  {{ item.professionIds.length }} специальност{{ item.professionIds.length === 1 ? 'ь' : (item.professionIds.length < 5 ? 'и' : 'ей') }}
+                </a>
+                <span *ngIf="!item.professionIds || item.professionIds.length === 0">-</span>
               </td>
               <td>{{ item.telegramChatId }}</td>
               <td>{{ item.createdAt | date: "yyyy-MM-dd HH:mm" }}</td>
@@ -67,7 +73,8 @@
                     <li>
                       <a
                         class="dropdown-item text-danger"
-                        (click)="delete(item)"
+                        href="#"
+                        (click)="delete(item); $event.preventDefault()"
                         >Удалить</a
                       >
                     </li>
@@ -133,8 +140,19 @@
     </div>
 
     <div class="mb-3">
-      <label>Специальности (через запятую)</label>
-      <input type="text" class="form-control" formControlName="professionIds" />
+      <label>Специальности</label>
+      <ng-select
+        [items]="professionsAsOptions"
+        [hideSelected]="true"
+        [selectOnTab]="true"
+        bindLabel="label"
+        bindValue="item"
+        placeholder="Выберите специальности"
+        formControlName="professionIds"
+        [multiple]="true"
+        [clearable]="true"
+      >
+      </ng-select>
       <app-field-error
         [field]="editForm.get('professionIds')"
       ></app-field-error>
@@ -150,3 +168,19 @@
   *ngIf="confirmDeletionMessage"
   [message]="confirmDeletionMessage"
 ></app-confirm-dialog>
+
+<app-dialog
+  [show]="!!selectedProfessionsForModal"
+  (closed)="closeProfessionsModal()"
+  [header]="'Специальности'"
+>
+  <ul class="list-group" *ngIf="selectedProfessionsForModal">
+    <li
+      class="list-group-item d-flex justify-content-between align-items-center"
+      *ngFor="let profession of selectedProfessionsForModal"
+    >
+      <span>{{ profession.title }}</span>
+      <span class="badge bg-secondary">ID: {{ profession.id }}</span>
+    </li>
+  </ul>
+</app-dialog>
