--- a/src/app/modules/admin/components/telegram/salaries-stat-subscriptions/stat-data-cache-records.component.scss
+++ b/src/app/modules/admin/components/telegram/salaries-stat-subscriptions/stat-data-cache-records.component.scss
@@ -11,3 +11,24 @@
   cursor: pointer;
   font-weight: 500;
 }
+
+// Ensure ng-select dropdown is visible inside modal
+:host ::ng-deep {
+  .modal-body {
+    overflow: visible;
+  }
+
+  .modal-content {
+    overflow: visible;
+  }
+}
+
+// Ensure action dropdown is visible outside table container
+.table-responsive {
+  overflow: visible;
+
+  .dropdown-menu {
+    position: absolute;
+    z-index: 1050;
+  }
+}
